--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_KAKAO_APP_KEY=1439a0da769c13dde3cf12b07193dbdc
-VITE_APP_API_URL=http://13.125.250.109:8080
+VITE_APP_API_URL=https://52.79.113.104:8443
