--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@vitejs/plugin-react": "^4.3.4",
     "@tanstack/react-query": "^5.67.2",
+    "@vitejs/plugin-react": "^4.3.4",
     "add": "^2.0.6",
     "axios": "^1.7.9",
     "react": "^18.3.1",
@@ -19,6 +19,7 @@
     "react-icons": "^5.4.0",
     "react-kakao-maps-sdk": "^1.1.27",
     "react-router": "^7.1.3",
+    "react-router-dom": "^7.3.0",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
