--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,5 @@
   to = "https://52.79.113.104:8443/api/:splat"
   status = 200
   force = true
-  headers = {
-    X-From = "Netlify"
-  } 
+  [redirects.headers]
+    X-From = "Netlify" 
