--- a/netlify.toml
+++ b/netlify.toml
@@ -4,4 +4,6 @@
   status = 200
   force = true
   [redirects.headers]
-    X-From = "Netlify" 
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
+    Access-Control-Allow-Headers = "Content-Type, Authorization" 
