--- a/netlify.toml
+++ b/netlify.toml
@@ -6,4 +6,6 @@
   [redirects.headers]
     Access-Control-Allow-Origin = "*"
     Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
-    Access-Control-Allow-Headers = "Content-Type, Authorization" 
+    Access-Control-Allow-Headers = "Content-Type, Authorization"
+    X-Forwarded-Host = "grand-horse-f40585.netlify.app"
+    X-Forwarded-Proto = "https" 
