--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_KAKAO_APP_KEY=1439a0da769c13dde3cf12b07193dbdc
-VITE_APP_API_URL=https://motp.kro.kr:8443/
+VITE_APP_API_URL=https://motp.kro.kr
